[package]
name = "lalrpop"
version = "0.1.0"
edition = "2021"

build = "build.rs" # <-- We added this and everything after!
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.19.8"
